apps/kube-system/cilium/base/Namespace-gateway.yaml
#gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    pod-security.kubernetes.io/enforce: privileged
